@@ -1,5 +1,5 @@
 /*
- * $Id: vpopmail.h,v 1.7.2.1 2004-06-26 02:20:56 tomcollins Exp $
+ * $Id: vpopmail.h,v 1.7.2.2 2004-10-07 19:40:24 tomcollins Exp $
  * Copyright (C) 1999-2002 Inter7 Internet Technologies, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
@@ -169,6 +169,17 @@ char *date_header();
 char *get_remote_ip();
 char *maildir_to_email(const char *maildir);
 int qnprintf (char *buffer, size_t size, const char *format, ...);
+
+/* Even though this definition defines data as 4096 bytes, we only allocate just
+ * enough memory to hold the data.
+ */
+struct linklist {
+	struct linklist *next;
+	char *d2;
+	char data[4096];
+};
+struct linklist * linklist_add (struct linklist *list, const char *d1, const char *d2);
+struct linklist * linklist_del (struct linklist *list);
 
 #ifdef APOP
 char *dec2hex(unsigned char *);
